--- a/NetFramwork_WildNature/Areas/Admin/Views/News/Edit.cshtml
+++ b/NetFramwork_WildNature/Areas/Admin/Views/News/Edit.cshtml
@@ -27,6 +27,7 @@
                 <div class="tab-content">
                     @using (Html.BeginForm("Edit", "News", FormMethod.Post, new { enctype = "multipart/form-data" }))
                     {
+                        @Html.AntiForgeryToken()
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         @Html.HiddenFor(model => model.ID)
 
@@ -41,7 +42,9 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.Images, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.Images, new { htmlAttributes = new { @class = "form-control" } })
+                                <img id="imagePreview" src="@Model.Images" alt="Image Preview" style="width:100px; height:100px;" />
+                                <input type="file" id="imageUpload" accept=".jpeg, .jpg, .png" onchange="loadFile(this)" />
+                                @Html.HiddenFor(model => model.Images)
                                 @Html.ValidationMessageFor(model => model.Images, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -57,7 +60,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.Decription, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.Decription, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.TextAreaFor(model => model.Decription, new { htmlAttributes = new { @class = "form-control" }, id = "ckDetail" })
                                 @Html.ValidationMessageFor(model => model.Decription, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -82,6 +85,11 @@
     </div>
 </section><!-- /.content -->
 
-@section Scripts {
+
+@section Scripts{
     @Scripts.Render("~/bundles/jqueryval")
+
+<script src="https://cdn.ckeditor.com/ckeditor5/29.0.0/classic/ckeditor.js"></script>
+    <script src="~/Asset/Admin/bootstrap/js/News.js"></script>
+
 }
