--- a/NetFramwork_WildNature/Areas/Admin/Views/News/Index.cshtml
+++ b/NetFramwork_WildNature/Areas/Admin/Views/News/Index.cshtml
@@ -59,7 +59,7 @@
                                     <img src="@Url.Content(item.Images)" alt=" Image" style="max-width: 100px; max-height: 100px;" />
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Decription)
+                                    @Html.Raw(item.Decription)
                                 </td>
                                 <td>
                                     @Html.FormatValue(item.Date, "{0:dd/MM/yyyy}")
