--- a/NetFramwork_WildNature/Asset/User/css/style.css
+++ b/NetFramwork_WildNature/Asset/User/css/style.css
@@ -382,8 +382,8 @@
 
 .animal-item .animal-text {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 300px;
+    height: 400px;
     top: 0;
     left: 0;
     background: rgba(0, 0, 0, .7);
