--- a/NetFramwork_WildNature/Views/AnimalList/Index.cshtml
+++ b/NetFramwork_WildNature/Views/AnimalList/Index.cshtml
@@ -1,12 +1,12 @@
-﻿
+﻿@model IEnumerable<NetFramwork_WildNature.Db.Image>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
+    var animalDetails = ViewBag.AnimalDetails as IEnumerable<NetFramwork_WildNature.Db.Animal>;
 }
 
-<<!-- Page Header Start -->
-<div class="container-fluid header-bg py-5 mb-5 wow fadeIn"
-     data-wow-delay="0.1s">
+<!-- Page Header Start -->
+<div class="container-fluid header-bg py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container py-5">
         <h1 class="display-4 text-white mb-3 animated slideInDown">Động vật</h1>
         <nav aria-label="breadcrumb animated slideInDown">
@@ -25,132 +25,55 @@
     </div>
 </div>
 <!-- Page Header End -->
+
 <!-- Bắt đầu Động vật -->
 <div class="container-xxl py-5">
     <div class="container">
-        <div class="row g-5 mb-5 align-items-end wow fadeInUp"
-             data-wow-delay="0.1s">
+        <div class="row g-5 mb-5 align-items-end wow fadeInUp" data-wow-delay="0.1s">
             <div class="col-lg-6">
-                <p><span class="text-primary me-2">#</span>Động vật </p>
                 <h1 class="display-5 mb-0">
-                    Hãy xem những loài <span class="text-primary">Wild Nature</span>đặc biệt
-
+                    <span class="text-primary">Wild Nature</span> đặc biệt
                 </h1>
             </div>
             <div class="col-lg-6 text-lg-end">
-                <a class="btn btn-primary py-3 px-5" href="">Khám phá Thêm Động Vật</a>
+                <form method="get" action="@Url.Action("Index", "AnimalList")">
+                    <div class="input-group">
+                        <input type="text" name="searchString" class="form-control" placeholder="Search for...">
+                        <div class="input-group-append">
+                            <button class="btn btn-secondary" type="submit">Go!</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
-        <div class="row g-4">
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="row g-4">
-                    <div class="col-12">
-                        <a class="animal-item"
-                           href="~/Asset/User/img/animal-md-1.jpg"
-                           data-lightbox="animal">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="~/Asset/User/img/animal-md-1.jpg" alt="" />
-                                <div class="animal-text p-4">
-                                    <p class="text-white small text-uppercase mb-0">Động vật</p>
-                                    <h5 class="text-white mb-0">Voi</h5>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-12">
-                        <a class="animal-item"
-                           href="~/Asset/User/img/animal-lg-1.jpg"
-                           data-lightbox="animal">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="~/Asset/User/img/animal-lg-1.jpg" alt="" />
-                                <div class="animal-text p-4">
-                                    <p class="text-white small text-uppercase mb-0">Động vật</p>
-                                    <h5 class="text-white mb-0">Voi</h5>
-                                </div>
-                            </div>
-                        </a>
+        <div class="row">
+            @foreach (var image in Model)
+            {
+                <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                    <div class="animal-item position-relative">
+                        
+                        <img class="img-fluid img_input" src="@Url.Content(image.Link)" alt="Animal Image" />
+                        <div class="animal-text p-2">
+                            <a href="@Url.Action("AnimalDetail", "AnimalList", new { id = image.ID })">
+                                @{
+                                    var animal = animalDetails.FirstOrDefault(a => a.AnimalDetails.Any(ad => ad.Images.Contains(image)));
+                                    if (animal != null)
+                                    {
+                                        <h5 class="text-white mb-0">@animal.Name</h5>
+                                        <br />
+                                        <p class="text-white mb-0"><strong>Tình trạng bảo tồn:</strong><br /> @animal.ConservationStatu.Decription</p>
+                                        <p class="text-white mb-0"><strong>Khu vực sinh sống:</strong><br /> @animal.Area.Name</p>
+                                    }
+                                }
+                            </a>
+
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                <div class="row g-4">
-                    <div class="col-12">
-                        <a class="animal-item"
-                           href="~/Asset/User/img/animal-lg-2.jpg"
-                           data-lightbox="animal">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="~/Asset/User/img/animal-lg-2.jpg" alt="" />
-                                <div class="animal-text p-4">
-                                    <p class="text-white small text-uppercase mb-0">Động vật</p>
-                                    <h5 class="text-white mb-0">Voi</h5>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-12">
-                        <a class="animal-item"
-                           href="~/Asset/User/img/animal-md-2.jpg"
-                           data-lightbox="animal">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="~/Asset/User/img/animal-md-2.jpg" alt="" />
-                                <div class="animal-text p-4">
-                                    <p class="text-white small text-uppercase mb-0">Động vật</p>
-                                    <h5 class="text-white mb-0">Voi</h5>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                <div class="row g-4">
-                    <div class="col-12">
-                        <a class="animal-item"
-                           href="~/Asset/User/img/animal-md-3.jpg"
-                           data-lightbox="animal">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="~/Asset/User/img/animal-md-3.jpg" alt="" />
-                                <div class="animal-text p-4">
-                                    <p class="text-white small text-uppercase mb-0">Động vật</p>
-                                    <h5 class="text-white mb-0">Voi</h5>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-12">
-                        <a class="animal-item"
-                           href="~/Asset/User/img/animal-lg-3.jpg"
-                           data-lightbox="animal">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="~/Asset/User/img/animal-lg-3.jpg" alt="" />
-                                <div class="animal-text p-4">
-                                    <p class="text-white small text-uppercase mb-0">Động vật</p>
-                                    <h5 class="text-white mb-0">Voi</h5>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
+            }
         </div>
     </div>
 </div>
-<!-- Kết thúc Động vật -->
-<!-- Bắt đầu Danh sách Động vật -->
-<div class="container py-5">
-    <h2 class="text-center mb-4">Danh sách Động vật</h2>
-    <div class="row">
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-            <div class="card">
-                <img src="~/Asset/User/img/animal-md-1.jpg" class="card-img-top" alt="Voi">
-                <div class="card-body">
-                    <h5 class="card-title">Voi</h5>
-                    <p class="card-text">Mô tả về loài voi.</p>
-                    <a href="#" class="btn btn-primary">Chi tiết</a>
-                </div>
-            </div>
-        </div>
-        <!-- Thêm các thẻ card khác cho các loài động vật khác vào đây -->
-    </div>
-</div>
-<!-- Kết thúc Danh sách Động vật -->
+<!-- Page Header End -->
+
+<link href="~/Asset/User/css/AnimalDetail/AnimalListcss.css" rel="stylesheet" />
