--- a/NetFramwork_WildNature/Asset/User/css/style.css
+++ b/NetFramwork_WildNature/Asset/User/css/style.css
@@ -1,4 +1,8 @@
 /********** Template CSS **********/
+/* ?n thanh cu?n cho t?t c? các trình duy?t */
+
+
+
 :root {
     --primary: #2EB872;
     --light: #F3F4F5;
