--- a/NetFramwork_WildNature/Areas/Admin/Views/Login/Index.cshtml
+++ b/NetFramwork_WildNature/Areas/Admin/Views/Login/Index.cshtml
@@ -1,84 +1,8 @@
-﻿@model NetFramwork_WildNature.Areas.Admin.Models.LoginModel
-<!doctype html>
-<html lang="en">
-<head>
-    <title>Login 09</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+﻿
+@{
+    ViewBag.Title = "Index";
+    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+}
 
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <link rel="stylesheet" href="~/Asset/Admin/controller/Loginadmin/css/style.css">
-
-</head>
-<body>
-    <section class="ftco-section">
-        <div class="container">
-            <div class="row justify-content-center">
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-md-6 col-lg-4">
-                    <div class="login-wrap py-5">
-                        <h3 class="text-center mb-0">Welcome</h3>
-                        
-                        @using (Html.BeginForm())
-                        {
-                            @Html.ValidationSummary(false, "", new { @class = "text-danger" });
-                            <div class="form-group mb-3">
-                                <label class="label" for="name">Email</label>
-                                <div class="form-group has-feedback">
-                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control", @placeholder = "Nhập email" })
-                                    <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-                                </div>
-                                <div>
-                                    @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                            <div class="form-group mb-3">
-                                <label class="label" for="password">Mật khẩu</label>
-                                <div class="form-group has-feedback">
-                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Nhập mật khẩu" })
-                                    <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-                                </div>
-                                <div>
-                                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                            <div class="form-group d-md-flex">
-                                <div class="w-50 text-left">
-                                    <label class="checkbox-wrap checkbox-primary mb-0">
-                                        @Html.CheckBoxFor(m => m.RememberMe)Lưu đăng nhập
-                                        <input type="checkbox" checked>
-                                        <span class="checkmark"></span>
-
-                                    </label>
-                                </div>
-                                <div class="w-50 text-md-right">
-                                    <a href="#">Quên mật khẩu</a>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <button type="submit" class="form-control btn btn-primary rounded submit px-3">Đăng nhập</button>
-                            </div>
-                            <p class="text-center">Muốn trở thành nhà tình nguyện? <a href="/Admin/Login/Signup">Đăng Ký</a></p>
-
-                        }
-
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <script src="@Url.Content("~/Asset/Admin/controller/Loginadmin/js/jquery.min.js")"></script>
-    <script src="@Url.Content("~/Asset/Admin/controller/Loginadmin/js/popper.js")"></script>
-    <script src="@Url.Content("~/Asset/Admin/controller/Loginadmin/js/bootstrap.min.js")"></script>
-    <script src="@Url.Content("~/Asset/Admin/controller/Loginadmin/js/main.js")"></script>
-
-</body>
-</html>
-
+<h2>Index</h2>
 
