--- a/NetFramwork_WildNature/Areas/Admin/Views/News/Edit.cshtml
+++ b/NetFramwork_WildNature/Areas/Admin/Views/News/Edit.cshtml
@@ -42,9 +42,8 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.Images, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                <img id="imagePreview" src="@Model.Images" alt="Image Preview" style="width:100px; height:100px;" />
-                                <input type="file" id="imageUpload" accept=".jpeg, .jpg, .png" onchange="loadFile(this)" />
-                                @Html.HiddenFor(model => model.Images)
+                                <img id="imageDisplay" src="@Url.Content(Model.Images)" alt="Current Image" width="100" height="100" />
+                                <input type="file" id="imageFile" name="Images" onchange="loadFile(Event)" />
                                 @Html.ValidationMessageFor(model => model.Images, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -60,7 +59,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.Decription, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.TextAreaFor(model => model.Decription, new { htmlAttributes = new { @class = "form-control" }, id = "ckDetail" })
+                                @Html.TextAreaFor(model => model.Decription, new { htmlAttributes = new { @class = "form-control" }, @id = "Decription" })
                                 @Html.ValidationMessageFor(model => model.Decription, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -68,7 +67,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.TextBoxFor(model => model.Date, "{0:yyyy-MM-dd}", new { @class = "form-control", @Value = DateTime.Now.ToString("yyyy-MM-dd"), @type = "date" })
                                 @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -85,14 +84,21 @@
     </div>
 </section><!-- /.content -->
 
-
 @section Scripts{
     @Scripts.Render("~/bundles/jqueryval")
-    <script src="~/Asset/Admin/bootstrap/js/News.js"></script>
-
-@{
-    var summernote = new NetFramwork_WildNature.Dao.Summernote("#Decription");
-    Html.RenderPartial("_Summernote", summernote);
+    <script>
+        var loadFile = function (event) {
+            var imageDisplay = document.getElementById('imageDisplay');
+            imageDisplay.src = URL.createObjectURL(event.target.files[0]);
+            imageDisplay.onload = function () {
+                URL.revokeObjectURL(imageDisplay.src) // free memory
+            };
+        };
+        document.getElementById('imageFile').addEventListener('change', loadFile);
+    </script>
 }
-    }
+
+
+
+
 
