--- a/NetFramwork_WildNature/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/NetFramwork_WildNature/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -66,28 +66,23 @@
                             </a>
                         </li>
                         <!-- User Account: style can be found in dropdown.less -->
-                        <li class="dropdown user user-menu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src="~/Asset/Admin/dist/img/avatar04.png" class="user-image" alt="User Image">
-                                @if (User.Identity.IsAuthenticated)
+                        @{
+                            var user = (NetFramwork_WildNature.Db.Account)HttpContext.Current.Session["user"];
+                        }
+                        <li class="nav-item dropdown">
+                            <a class="nav-link" data-toggle="dropdown">
+                                <i class="fa fa-user"></i>
+                                @if (user != null)
                                 {
-                                    <span class="hidden-xs">Hello @User.Identity.Name</span>
+                                    <span>@user.Name</span>
                                 }
-
                             </a>
-                            <ul class="dropdown-menu">
-                                <!-- User image -->
-                                <li class="user-header">
-                                    <img src="~/Asset/Admin/dist/img/avatar04.png" class="img-circle" alt="User Image">
+                            <ul class="dropdown-menu dropdown-user">
+                                <li>
+                                    <a href="#"><i class="fa fa-user fa-fw"></i> User profile </a>
                                 </li>
-                                <!-- Menu Footer-->
-                                <li class="user-footer">
-                                    <div class="pull-left">
-                                        <a href="#" class="btn btn-default btn-flat">Profile</a>
-                                    </div>
-                                    <div class="pull-right">
-                                        <a href="/Admin/Login/Logout" class="btn btn-default btn-flat">Sign out</a>
-                                    </div>
+                                <li>
+                                    <a href="/Admin/Login/Logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                                 </li>
                             </ul>
                         </li>
