--- a/NetFramwork_WildNature/Views/Contact/Index.cshtml
+++ b/NetFramwork_WildNature/Views/Contact/Index.cshtml
@@ -40,7 +40,7 @@
                         <p class="mb-2">
                             <span class="text-primary me-2">#</span>Địa chỉ
                         </p>
-                        <h5 class="mb-0">123 Đường, New York, Mỹ</h5>
+                        <h5 class="mb-0">Huyện Tân Phú, tỉnh Đồng Nai, Việt Nam</h5>
                     </div>
                 </div>
             </div>
@@ -53,7 +53,7 @@
                         <p class="mb-2">
                             <span class="text-primary me-2">#</span>Gọi Ngay
                         </p>
-                        <h5 class="mb-0">+012 345 6789</h5>
+                        <h5 class="mb-0">0379627003</h5>
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                         <p class="mb-2">
                             <span class="text-primary me-2">#</span>Email Ngay
                         </p>
-                        <h5 class="mb-0">info@example.com</h5>
+                        <h5 class="mb-0">lukhuong190703@gmail.com</h5>
                     </div>
                 </div>
             </div>
@@ -75,10 +75,6 @@
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                 <p><span class="text-primary me-2">#</span>Liên hệ</p>
                 <h1 class="display-5 mb-4">Có Bất Kỳ Câu Hỏi Nào? Hãy Liên Hệ Với Chúng Tôi!</h1>
-                <p class="mb-4">
-                    Biểu mẫu liên hệ hiện đang không hoạt động. Nhận một biểu mẫu liên hệ hoạt động với Ajax & PHP chỉ trong vài phút. Chỉ cần sao chép và dán các tệp, thêm một chút mã và bạn đã xong.
-                    <a href="https://htmlcodex.com/contact-form">Tải Xuống Ngay</a>.
-                </p>
                 <form>
                     <div class="row g-3">
                         <div class="col-md-6">
@@ -128,7 +124,7 @@
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="h-100" style="min-height: 400px">
                     <iframe class="rounded w-100 h-100"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d250329.435537736!2d107.19522620407369!3d11.378653651291355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317480969be96391%3A0x584ad64d2a01d9a5!2zVsaw4budbiBRdeG7kWMgR2lhIEPDoXQgVGnDqm4!5e0!3m2!1svi!2s!4v1716828416798!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></>
                             frameborder="0"
                             allowfullscreen=""
                             aria-hidden="false"
