--- a/NetFramwork_WildNature/Areas/Admin/Views/Login/Login.cshtml
+++ b/NetFramwork_WildNature/Areas/Admin/Views/Login/Login.cshtml
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="icon" type="image/png" href="~/Asset/Admin/controller/Login/images/icons/favicon.ico" />
-
+    <link href="~/Asset/Admin/controller/Login/css/addLogin.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="~/Asset/Admin/controller/Login/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="~/Asset/Admin/controller/Login/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="~/Asset/Admin/controller/Login/vendor/animate/animate.css">
@@ -29,7 +29,7 @@
                 <form class="login100-form validate-form" method="post">
                     @Html.AntiForgeryToken()
                     <span class="login100-form-title">
-                        Login
+                        Đăng nhập
                     </span>
                     @if (TempData["error"] != null)
                     {
@@ -45,7 +45,7 @@
                         </span>
                     </div>
                     <div class="wrap-input100 validate-input" data-validate="Password is required">
-                        <input class="input100" type="password" name="pass" placeholder="Password">
+                        <input class="input100" type="password" name="pass" placeholder="Mật khẩu">
                         <span class="focus-input100"></span>
                         <span class="symbol-input100">
                             <i class="fa fa-lock" aria-hidden="true"></i>
@@ -57,8 +57,8 @@
                         </button>
                     </div>
                     <div class="text-center p-t-12">
-                        <a class="txt2" href="#">
-                            Quên mật Khẩu ?
+                        <a class="txt2" href="/Admin/Login/ForgetPassword">
+                            Quên mật khẩu ?
                         </a>
                     </div>
                     <div class="text-center p-t-136">
@@ -93,3 +93,4 @@
     </script>
 </body>
 </html>
+
