--- a/NetFramwork_WildNature/Asset/Admin/controller/Login/css/main.css
+++ b/NetFramwork_WildNature/Asset/Admin/controller/Login/css/main.css
@@ -1,6 +1,8 @@
 
 
-
+.login100-form-title {
+	font-family: Montserrat-Bold !important;
+}
 
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
